--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Virtual Garage</title>
+    <link href="game.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="game.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <header>Menu</header>
+    <main>
+      <section>Display Area</section>
+      <section>
+        <ul>
+          <li>
+            <details>
+              <summary>
+                Headlights
+              </summary>
+              <ul>
+                <li>Stock</li>
+                <li>Civic Type R</li>
+              </ul>
+            </details>
+          </li>
+          <li>
+            <details>
+              <summary>
+                Front Bumper
+              </summary>
+              <ul>
+                <li>Stock</li>
+                <li>Civic Type R</li>
+              </ul>
+            </details>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>Copyright</footer>
+  </body>
+</html>
