--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <li>
             <details>
               <summary>
-                Headlights
+                <h2>Headlights</h2>
+                <span>Stock<span>
               </summary>
               <ul>
                 <li>Stock</li>
@@ -27,7 +28,8 @@
           <li>
             <details>
               <summary>
-                Front Bumper
+                <h2>Front Bumper</h2>
+                <span>Stock<span>
               </summary>
               <ul>
                 <li>Stock</li>
