--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Virtual Garage</title>
     <link href="game.css" rel="stylesheet" type="text/css" media="all" />
     <link href="style.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="9900hondacivic3dr.js"></script>
     <script src="game.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
