--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header>Menu</header>
     <main>
-      <section>Display Area</section>
-      <section>
+      <section id="display">Display Area</section>
+      <section id="options">
         <ul>
           <li>
             <details>
