--- a/index.html
+++ b/index.html
@@ -13,32 +13,34 @@
     <main>
       <section id="display">Display Area</section>
       <section id="options">
-        <ul>
-          <li>
-            <details>
-              <summary>
-                <h2>Headlights</h2>
-                <span>Stock<span>
-              </summary>
-              <ul>
-                <li>Stock</li>
-                <li>Civic Type R</li>
-              </ul>
-            </details>
-          </li>
-          <li>
-            <details>
-              <summary>
-                <h2>Front Bumper</h2>
-                <span>Stock<span>
-              </summary>
-              <ul>
-                <li>Stock</li>
-                <li>Civic Type R</li>
-              </ul>
-            </details>
-          </li>
-        </ul>
+        <div>
+          <ul>
+            <li>
+              <details>
+                <summary>
+                  <h2>Headlights</h2>
+                  <span>Stock</span>
+                </summary>
+                <ul>
+                  <li>Stock</li>
+                  <li>Civic Type R</li>
+                </ul>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>
+                  <h2>Front Bumper</h2>
+                  <span>Stock</span>
+                </summary>
+                <ul>
+                  <li>Stock</li>
+                  <li>Civic Type R</li>
+                </ul>
+              </details>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
