--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <header>Menu</header>
+    <header>
+      <span class="material-icons">arrow_back</span>
+      <h1>1999-2000 Honda Civic (3DR)</h1>
+    </header>
     <main>
       <section id="display">Display Area</section>
       <section id="options">
