--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
                 </ul>
               </details>
             </li>
+            <li>
+              <details>
+                <summary>
+                  <h2>Rear Bumper</h2>
+                  <span>Stock</span>
+                </summary>
+                <ul>
+                  <li>Stock</li>
+                  <li>Civic Type R</li>
+                </ul>
+              </details>
+            </li>
           </ul>
         </div>
       </section>
