--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
   </head>
   <body>
     <header>
-      <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10.25 6.75L4.75 12L10.25 17.25"></path>
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19.25 12H5"></path>
-      </svg>
-      <h1>1999-2000 Honda Civic (3DR)</h1>
+      <h1>Virtual Garage > 1999-2000 Honda Civic (3DR)</h1>
     </header>
     <main>
       <section id="display">Display Area</section>
