--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>Virtual Garage > 1999-2000 Honda Civic (3DR)</h1>
+      <h1><a href="/">Virtual Garage</a> &gt; 1999-2000 Honda Civic (3DR)</h1>
     </header>
     <main>
       <section id="display">Display Area</section>
