--- a/index.html
+++ b/index.html
@@ -2,52 +2,21 @@
 <html>
   <head>
     <title>Virtual Garage</title>
-    <link href="game.css" rel="stylesheet" type="text/css" media="all" />
     <link href="style.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="template.js"></script>
-    <script src="game.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
-      <h1><a href="/">Virtual Garage</a> &gt; 1999-2000 Honda Civic (3DR)</h1>
+      <h1>Virtual Garage</h1>
     </header>
     <main>
-      <section id="display">Display Area</section>
-      <section id="options">
-        <div>
-          <details>
-            <summary>
-              <h2>Headlights</h2>
-              <span>Stock</span>
-            </summary>
-            <ul>
-              <li>Stock</li>
-              <li>Civic Type R</li>
-            </ul>
-          </details>
-          <details>
-            <summary>
-              <h2>Front Bumper</h2>
-              <span>Stock</span>
-            </summary>
-            <ul>
-              <li>Stock</li>
-              <li>Civic Type R</li>
-            </ul>
-          </details>
-          <details>
-            <summary>
-              <h2>Rear Bumper</h2>
-              <span>Stock</span>
-            </summary>
-            <ul>
-              <li>Stock</li>
-              <li>Civic Type R</li>
-            </ul>
-          </details>
-        </div>
-      </section>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque odio leo, sit amet varius dui lobortis non. Donec consequat placerat sapien, at porta urna euismod non. Pellentesque id lobortis risus. Aenean quis egestas augue. Nulla ante mauris, euismod eget ligula a, ultrices semper elit. Nam elementum pharetra rutrum. Suspendisse potenti. In libero metus, fringilla ac venenatis sed, hendrerit gravida justo. Quisque in magna eros. Nunc ac condimentum sem. Nulla tincidunt mi a malesuada cursus.</p>
+      <ul>
+        <li><a href="play/#1993hondadelsol">1993 Honda del Sol</a></li>
+        <li><a href="play/#1996hondacivic3dr">1996 Honda Civic (3DR)</a></li>
+        <li><a href="play/#1999hondacivic3dr">1999 Honda Civic (3DR)</a></li>
+        <li><a href="play/#1999hondacivic2dr">1999 Honda Civic (2DR)</a></li>
+      </ul>
     </main>
   </body>
 </html>
