--- a/play/index.html
+++ b/play/index.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <base href="../">
+    <script src="init.js"></script>
     <title>Virtual Garage</title>
-    <link href="game.css" rel="stylesheet" type="text/css" media="all" />
     <link href="style.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="template.js"></script>
     <script src="game.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
-      <h1><a href="/">Virtual Garage</a> &gt; 1999-2000 Honda Civic (3DR)</h1>
+      <h1><a href="/">Virtual Garage</a> &gt; <span id="page-title">1999-2000 Honda Civic (3DR)</span></h1>
     </header>
     <main>
       <section id="display">Display Area</section>
