--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <main>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque odio leo, sit amet varius dui lobortis non. Donec consequat placerat sapien, at porta urna euismod non. Pellentesque id lobortis risus. Aenean quis egestas augue. Nulla ante mauris, euismod eget ligula a, ultrices semper elit. Nam elementum pharetra rutrum. Suspendisse potenti. In libero metus, fringilla ac venenatis sed, hendrerit gravida justo. Quisque in magna eros. Nunc ac condimentum sem. Nulla tincidunt mi a malesuada cursus.</p>
       <ul>
-        <li><a href="play/#1993hondadelsol">1993 Honda del Sol</a></li>
-        <li><a href="play/#1996hondacivic3dr">1996 Honda Civic (3DR)</a></li>
-        <li><a href="play/#1999hondacivic3dr">1999 Honda Civic (3DR)</a></li>
-        <li><a href="play/#1999hondacivic2dr">1999 Honda Civic (2DR)</a></li>
+        <li><a href="run/#1993hondadelsol">1993 Honda del Sol</a></li>
+        <li><a href="run/#1996hondacivic3dr">1996 Honda Civic (3DR)</a></li>
+        <li><a href="run/#1999hondacivic3dr">1999 Honda Civic (3DR)</a></li>
+        <li><a href="run/#1999hondacivic2dr">1999 Honda Civic (2DR)</a></li>
       </ul>
     </main>
   </body>
