--- a/run/index.html
+++ b/run/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="https://chrisephoto.github.io/virtualgarage/">Virtual Garage</a> &gt; <span id="page-title">1999-2000 Honda Civic (3DR)</span></h1>
+      <h1><a href="https://chrisephoto.github.io/virtualgarage/">Virtual Garage</a> &gt; <span id="page-title"></span></h1>
     </header>
     <main>
       <section id="display">Display Area</section>
