--- a/run/index.html
+++ b/run/index.html
@@ -5,6 +5,9 @@
     <title>Virtual Garage</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all" />
     <script src="init.js"></script>
+    <script type='text/javascript' > 
+      window.title = "title";
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
