--- a/run/index.html
+++ b/run/index.html
@@ -4,11 +4,13 @@
     <base href="../">
     <title>Virtual Garage</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="init.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <script type='text/javascript' > 
       window.title = "title";
     </script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="init.js"></script>
+    <script src="game.js"></script>
   </head>
   <body>
     <header>
