--- a/run/index.html
+++ b/run/index.html
@@ -8,6 +8,7 @@
     
     <script type='text/javascript' > 
       window.title = "title";
+      window.parts = [];
     </script>
     <script src="init.js"></script>
     <script src="game.js"></script>
