--- a/run/index.html
+++ b/run/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <script type='text/javascript' > 
-      window.title = "title";
-      window.parts = [];
+      var window.title = "";
+      const window.parts = [];
     </script>
     <script src="init.js"></script>
     <script src="game.js"></script>
