--- a/run/index.html
+++ b/run/index.html
@@ -14,38 +14,7 @@
     <main>
       <section id="display">Display Area</section>
       <section id="options">
-        <div>
-          <details>
-            <summary>
-              <h2>Headlights</h2>
-              <span>Stock</span>
-            </summary>
-            <ul>
-              <li>Stock</li>
-              <li>Civic Type R</li>
-            </ul>
-          </details>
-          <details>
-            <summary>
-              <h2>Front Bumper</h2>
-              <span>Stock</span>
-            </summary>
-            <ul>
-              <li>Stock</li>
-              <li>Civic Type R</li>
-            </ul>
-          </details>
-          <details>
-            <summary>
-              <h2>Rear Bumper</h2>
-              <span>Stock</span>
-            </summary>
-            <ul>
-              <li>Stock</li>
-              <li>Civic Type R</li>
-            </ul>
-          </details>
-        </div>
+        <div></div>
       </section>
     </main>
   </body>
