--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     </header>
     <main>
       <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque odio leo, sit amet varius dui lobortis non. Donec consequat placerat sapien, at porta urna euismod non. Pellentesque id lobortis risus. Aenean quis egestas augue. Nulla ante mauris, euismod eget ligula a, ultrices semper elit. Nam elementum pharetra rutrum. Suspendisse potenti. In libero metus, fringilla ac venenatis sed, hendrerit gravida justo. Quisque in magna eros. Nunc ac condimentum sem. Nulla tincidunt mi a malesuada cursus.</p>
+        <h2>Introduction</h2>
+        <p>This is a little tool that I made to modify cars and visualize changes to various parts on a vehicle. It features parts from various real world manufacturers.<p>
+        <h2>Cars</h2>
         <ul>
           <li><a href="run/#1993hondadelsol">1993 Honda del Sol</a></li>
-          <li><a href="run/#1996hondacivic3dr">1996 Honda Civic (3DR)</a></li>
           <li><a href="run/#1999hondacivic3dr">1999 Honda Civic (3DR)</a></li>
-          <li><a href="run/#1999hondacivic2dr">1999 Honda Civic (2DR)</a></li>
+        </ul>
+        <h2>Changelog</h2>
+        <h3>V0.0.0</h3>
+        <ul>
+          <li>Initial release</li>
         </ul>
       </div>
     </main>
