--- a/run/index.html
+++ b/run/index.html
@@ -12,6 +12,7 @@
       <h1><a href="https://chrisephoto.github.io/virtualgarage/">Virtual Garage</a> &gt; <span id="page-title"></span></h1>
     </header>
     <main>
+      <div id="loading>Loading</div>
       <section id="display">Display Area</section>
       <section id="options">
         <div></div>
