--- a/run/index.html
+++ b/run/index.html
@@ -11,7 +11,9 @@
     <header>
       <h1><a href="https://chrisephoto.github.io/virtualgarage/">Virtual Garage</a> &gt; <span id="page-title"></span></h1>
     </header>
-    <div id="loading">Loading</div>
+    <div id="loading">
+      <span>Loading</span>
+    </div>
     <main>
       <section id="display">Display Area</section>
       <section id="options">
