--- a/run/index.html
+++ b/run/index.html
@@ -12,7 +12,12 @@
       <h1><a href="https://chrisephoto.github.io/virtualgarage/">Virtual Garage</a> &gt; <span id="page-title"></span></h1>
     </header>
     <main>
-      <section id="display">Display Area</section>
+      <section id="display">
+        <canvas id="canvas-04"></canvas>
+        <canvas id="canvas-03"></canvas>
+        <canvas id="canvas-02"></canvas>
+        <canvas id="canvas-01"></canvas>
+      </section>
       <section id="options">
         <div></div>
       </section>
