--- a/run/index.html
+++ b/run/index.html
@@ -13,6 +13,8 @@
     </header>
     <main>
       <section id="display">
+        <canvas id="canvas-00"></canvas>
+        
         <canvas id="canvas-04"></canvas>
         <canvas id="canvas-03"></canvas>
         <canvas id="canvas-02"></canvas>
