--- a/run/index.html
+++ b/run/index.html
@@ -10,6 +10,9 @@
   <body>
     <header>
       <h1><a href="https://chrisephoto.github.io/virtualgarage/">Virtual Garage</a> &gt; <span id="page-title"></span></h1>
+      <span onclick="initialDraw()">Initial</span>
+      <span onclick="updateDraw()">Update</span>
+      <span onclick="finalDraw()">Final</span>
     </header>
     <main>
       <section id="display">
